# MeoMilk

./: README.md
MeoMilk/: CMakeLists.txt  _unused_Makefile  reference.txt
MeoMilk/Framework/Common/: BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  GraphicsManager.hpp  main.cpp
MeoMilk/Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp  Interface.hpp
MeoMilk/Platform/: CMakeLists.txt
MeoMilk/Platform/Empty/: EmptyApplication.cpp
MeoMilk/Platform/Linux/: .testlin.cpp.swp  CMakeLists.txt  testlin  testlin.cpp
MeoMilk/Platform/Windows/: testwin.cpp
